--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "portfolioLolyta",
   "version": "0.1.0",
-  "homepage": "www.lolytaproject.site.lolyta",
+  "homepage": "https://karlacahaya.github.io/React-Portfolio",
   "private": true,
   "dependencies": {
-    "mdb-react-ui-kit": "^5.0.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "2.1.1",
