--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolioLolyta",
   "version": "0.1.0",
-  "homepage": "https://karlacahaya.github.io/portfolio",
+  "homepage": "https://lolytaaprtm.github.io/portfolio",
   "private": true,
   "dependencies": {
     "react": "^16.14.0",
