--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://lolytaaprtm.github.io/portfolio",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "2.1.1",
